@@ -12,6 +12,7 @@
 * M. Dietrich, G. Hope: Background color in thread-index configurable.
 * Gravatar is configurable.
 * #103: Drafts are saved on force close or quit by default.
+* C-v: duplicate and refine query.
 
 == v0.5 / 2016-02-06
 
